FPVTL-1947: resolved merge conflicts in build.gradle